[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Epilogue/Phone.gd" type="Script" id=1]
[ext_resource path="res://Assets/Epilogue/@PhoneSpriteSheet.png" type="Texture" id=2]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Body_Enter"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[sub_resource type="DynamicFont" id=4]
extra_spacing_char = 1
extra_spacing_space = -2
font_data = ExtResource( 3 )

[node name="Puzzle1Portal" type="Area2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 43.3225, 33.3262, -44.431, 34.6626, -51.5582, -29.0367, 50.8952, -29.9276 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Body_Enter = SubResource( 1 )
anims/Idle = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.86102e-06, 0 )
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 2 )
hframes = 2

[node name="InstructionLabel" type="Label" parent="."]
visible = false
margin_left = -75.1634
margin_top = -85.8456
margin_right = 70.8366
margin_bottom = -53.8456
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Press <Enter> to Look"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Puzzle1Portal_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Puzzle1Portal_body_exited"]
[connection signal="input_event" from="." to="." method="_on_Puzzle1Portal_input_event"]
